# genbank-parser

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: test_benchmark.rs
src/: lib.rs  main.rs
src/arrow/: mod.rs
src/faster/: mod.rs
tests/: tests.rs
