[package]
name = "genbank-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memchr = "2.7"
# rmp-serde = "1.1"
csv = "1.1"

[dev-dependencies]
criterion = "0.5"
arrow = "51.0"

[[bench]]
name = "test_benchmark"
harness = false